liquidity and staking updated

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "LOD Swap",
-  "name": "Farm LOD with Uniswap LP Tokens",
+  "short_name": "LOD Token",
+  "name": "LOD Token by Los Dorados",
   "icons": [
     {
       "src": "favicon.png",
